Docker Compose was added

--- a/configs/config.yml
+++ b/configs/config.yml
@@ -1,8 +1,7 @@
 port: "8000"
 db:
-  host: "localhost"
-  port: "5436"
+  host: "db-postgres"
+  port: "5432"
   username: "postgres"
-  password: "qwerty"
   dbname: "postgres"
   sslmode: "disable"
